--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,11 @@ dj-database-url==2.3.0
 Django==5.2
 django-storages==1.14.6
 et_xmlfile==2.0.0
+gunicorn==23.0.0
 jmespath==1.0.1
 numpy==2.2.5
 openpyxl==3.1.5
+packaging==25.0
 pandas==2.2.3
 pillow==11.2.1
 psycopg2-binary==2.9.10
@@ -21,3 +23,4 @@ sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
+whitenoise==6.9.0
