--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+arrow==1.3.0
 asgiref==3.8.1
+attrs==25.3.0
 boto3==1.38.0
 botocore==1.38.0
 dj-database-url==2.3.0
@@ -6,6 +8,7 @@ Django==5.2
 django-storages==1.14.6
 et_xmlfile==2.0.0
 gunicorn==23.0.0
+ics==0.7.2
 jmespath==1.0.1
 numpy==2.2.5
 openpyxl==3.1.5
@@ -20,6 +23,8 @@ qrcode==8.1
 s3transfer==0.12.0
 six==1.17.0
 sqlparse==0.5.3
+TatSu==5.13.1
+types-python-dateutil==2.9.0.20241206
 typing_extensions==4.13.2
 tzdata==2025.2
 urllib3==2.4.0
